// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/nuxt/plugin not root project should create nodes 1`] = `
{
  "projects": {
    "my-app": {
      "root": "my-app",
      "targets": {
        "acme-build-static": {
          "cache": true,
          "command": "nuxt build --prerender",
          "dependsOn": [
            "^acme-build-static",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": "my-app",
          },
          "outputs": [
            "{workspaceRoot}/dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "acme-serve-static": {
          "executor": "@nx/web:file-server",
          "options": {
            "buildTarget": "acme-build-static",
            "port": 4200,
            "spa": false,
            "staticFilePath": "{projectRoot}/dist",
          },
        },
        "build-something": {
          "cache": true,
          "command": "nuxt build",
          "dependsOn": [
            "^build-something",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": "my-app",
          },
          "outputs": [
            "{workspaceRoot}/dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "my-serve": {
          "command": "nuxt dev",
          "options": {
            "cwd": "my-app",
          },
        },
      },
    },
  },
}
`;

exports[`@nx/nuxt/plugin root project should create nodes 1`] = `
{
  "projects": {
    ".": {
      "root": ".",
      "targets": {
        "build": {
          "cache": true,
          "command": "nuxt build",
          "dependsOn": [
            "^build",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": ".",
          },
          "outputs": [
            "dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "build-static": {
          "cache": true,
          "command": "nuxt build --prerender",
          "dependsOn": [
            "^build-static",
          ],
          "inputs": [
            "production",
            "^production",
            {
              "externalDependencies": [
                "nuxt",
              ],
            },
          ],
          "options": {
            "cwd": ".",
          },
          "outputs": [
            "dist/my-app/.nuxt",
            "{projectRoot}/.output",
          ],
        },
        "serve": {
          "command": "nuxt dev",
          "options": {
            "cwd": ".",
          },
        },
        "serve-static": {
          "executor": "@nx/web:file-server",
          "options": {
            "buildTarget": "build-static",
            "port": 4200,
            "spa": false,
            "staticFilePath": "{projectRoot}/dist",
          },
        },
      },
    },
  },
}
`;
